--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -550,6 +550,16 @@ selection-color: rgb(85, 0, 0);</string>
                          </item>
                          <item row="0" column="1">
                           <layout class="QGridLayout" name="gridLayout_81">
+                           <item row="3" column="0">
+                            <widget class="QPushButton" name="pushButton_del_temp_graph_tab">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(255, 185, 185);</string>
+                             </property>
+                             <property name="text">
+                              <string>DEL TEMP</string>
+                             </property>
+                            </widget>
+                           </item>
                            <item row="0" column="0">
                             <widget class="QLabel" name="label_2">
                              <property name="font">
@@ -562,9 +572,6 @@ selection-color: rgb(85, 0, 0);</string>
                              </property>
                             </widget>
                            </item>
-                           <item row="1" column="0">
-                            <widget class="QComboBox" name="comboBox_temp_graph_tab"/>
-                           </item>
                            <item row="2" column="0">
                             <widget class="QPushButton" name="pushButton_add_temp_graph_tab">
                              <property name="styleSheet">
@@ -572,16 +579,6 @@ selection-color: rgb(85, 0, 0);</string>
                              </property>
                              <property name="text">
                               <string>ADD TEMP</string>
-                             </property>
-                            </widget>
-                           </item>
-                           <item row="3" column="0">
-                            <widget class="QPushButton" name="pushButton_del_temp_graph_tab">
-                             <property name="styleSheet">
-                              <string notr="true">background-color: rgb(255, 185, 185);</string>
-                             </property>
-                             <property name="text">
-                              <string>DEL TEMP</string>
                              </property>
                             </widget>
                            </item>
@@ -594,6 +591,22 @@ selection-color: rgb(85, 0, 0);</string>
                               <string>USE TEMP</string>
                              </property>
                             </widget>
+                           </item>
+                           <item row="1" column="0">
+                            <widget class="QComboBox" name="comboBox_temp_graph_tab"/>
+                           </item>
+                           <item row="5" column="0">
+                            <spacer name="verticalSpacer">
+                             <property name="orientation">
+                              <enum>Qt::Vertical</enum>
+                             </property>
+                             <property name="sizeHint" stdset="0">
+                              <size>
+                               <width>20</width>
+                               <height>40</height>
+                              </size>
+                             </property>
+                            </spacer>
                            </item>
                           </layout>
                          </item>
